force-app/main/default/objects/Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sodexo</fullName>
            </value>
            <value>
                <fullName>Lunchit</fullName>
            </value>
            <value>
                <fullName>Digibon</fullName>
            </value>
            <value>
                <fullName>hrmony</fullName>
            </value>
            <value>
                <fullName>Lieferando</fullName>
            </value>
            <value>
                <fullName>Spar/Interspar</fullName>
            </value>
            <value>
                <fullName>REWE</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Baumax</fullName>
            </value>
            <value>
                <fullName>Benetton</fullName>
            </value>
            <value>
                <fullName>Billa</fullName>
            </value>
            <value>
                <fullName>Bipa</fullName>
            </value>
            <value>
                <fullName>C&amp;A</fullName>
            </value>
            <value>
                <fullName>Charles Vögele Moden</fullName>
            </value>
            <value>
                <fullName>Connex Hotelgutscheine</fullName>
            </value>
            <value>
                <fullName>Cosmos</fullName>
            </value>
            <value>
                <fullName>Deichmann</fullName>
            </value>
            <value>
                <fullName>Der10erGutschein</fullName>
            </value>
            <value>
                <fullName>Dez Einkaufszentrum</fullName>
            </value>
            <value>
                <fullName>dm</fullName>
            </value>
            <value>
                <fullName>Donauzentrum</fullName>
            </value>
            <value>
                <fullName>Douglas</fullName>
            </value>
            <value>
                <fullName>Eduscho/Tschibo</fullName>
            </value>
            <value>
                <fullName>Einkaufszentrum</fullName>
            </value>
            <value>
                <fullName>Europark</fullName>
            </value>
            <value>
                <fullName>Euro Plaza Karte Porreal</fullName>
            </value>
            <value>
                <fullName>Eybl</fullName>
            </value>
            <value>
                <fullName>Golddukaten</fullName>
            </value>
            <value>
                <fullName>Gourmet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>