force-app/main/default/objects/Competitor__c/fields/Competitor_Days__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Days__c</fullName>
    <label>Competitor Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>