force-app/main/default/objects/Competitor__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>