force-app/main/default/objects/Competitor__c/fields/Current_System__c.field-meta.xml
<CustomField>
    <fullName>Current_System__c</fullName>
    <label>Current System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>