force-app/main/default/objects/Competitor__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>