force-app/main/default/objects/Competitor__c/fields/Turnover_Value__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Value__c</fullName>
    <label>Turnover Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>