force-app/main/default/objects/Competitor__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <label>Users</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>