force-app/main/default/objects/Competitor__c/fields/Won_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Date__c</fullName>
    <label>Won/Lost Date</label>
    <type>Date</type>
</CustomField>